tests/error/compile/group_missing_brace.wks
# @desc: @group requires a block

# @expect-error: Expected '{' to begin @group block

@group "NoBrace"
a "cmd" +write %{{echo a}}
